<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/marginLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintRight_toLeftOf="@id/monthName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/marginRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintLeft_toRightOf="@id/marginTop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/marginTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintHorizontal_weight="150"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/marginLeft"
        app:layout_constraintBottom_toTopOf="@id/dayBackground1"
        app:layout_constraintRight_toLeftOf="@id/marginRight"/>

    <View
        android:id="@+id/marginBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintHorizontal_weight="150"
        app:layout_constraintTop_toBottomOf="@id/dayBackgroundLeft"
        app:layout_constraintLeft_toRightOf="@id/marginLeft"
        app:layout_constraintRight_toLeftOf="@id/marginRight"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/marginTopMonth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintRight_toLeftOf="@id/marginRight"
        app:layout_constraintLeft_toRightOf="@id/marginLeft"
        app:layout_constraintBottom_toTopOf="@id/monthName"
        app:layout_constraintTop_toBottomOf="@+id/dayBackground1"/>

    <View
        android:id="@+id/marginBottomMonth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/monthName"
        app:layout_constraintBottom_toTopOf="@id/dayBackgroundLeft"
        app:layout_constraintLeft_toRightOf="@id/marginLeft"
        app:layout_constraintRight_toLeftOf="@id/marginRight" />

    <TextView
        android:id="@+id/monthName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="19 Maj"
        android:maxLines="1"
        android:textStyle="bold"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:background="@drawable/rectangle"
        app:layout_constraintHorizontal_weight="100"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintBottom_toTopOf="@id/marginBottomMonth"
        app:layout_constraintRight_toLeftOf="@id/marginRight"
        app:layout_constraintLeft_toRightOf="@id/marginLeft"
        app:layout_constraintTop_toBottomOf="@+id/marginTopMonth" />

    <View
        android:id="@+id/dayBackgroundLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/month_rectangle"
        app:layout_constraintVertical_weight="50"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintBottom_toTopOf="@id/marginBottom"
        app:layout_constraintRight_toLeftOf="@id/marginRight"
        app:layout_constraintLeft_toRightOf="@id/marginLeft"
        app:layout_constraintTop_toBottomOf="@id/marginBottomMonth" />

    <View
        android:id="@+id/daysTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/month_rectangle"
        app:layout_constraintVertical_weight="40"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintBottom_toTopOf="@id/marginInsideBottom"
        app:layout_constraintRight_toLeftOf="@id/marginInsideRight"
        app:layout_constraintLeft_toRightOf="@id/marginInsideLeft"
        app:layout_constraintTop_toBottomOf="@id/marginInsideTop" />

    <TextView
        android:id="@+id/tasksHead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/zadania"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/days_rectangle"
        app:layout_constraintVertical_weight="6"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintTop_toBottomOf="@id/marginInsideTop"
        app:layout_constraintLeft_toRightOf="@id/marginInsideLeft"
        app:layout_constraintRight_toLeftOf="@id/marginInsideRight"
        app:layout_constraintBottom_toTopOf="@id/tasks"/>

    <TextView
        android:id="@+id/tasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/days_rectangle"
        app:layout_constraintVertical_weight="40"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintTop_toBottomOf="@id/tasksHead"
        app:layout_constraintLeft_toRightOf="@id/marginInsideLeft"
        app:layout_constraintRight_toLeftOf="@id/marginInsideRight"
        app:layout_constraintBottom_toTopOf="@id/notesHead"/>

    <TextView
        android:id="@+id/notesHead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:text="@string/notatki"
        android:gravity="center"
        android:textSize="15sp"
        android:background="@drawable/days_rectangle"
        app:layout_constraintVertical_weight="6"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintTop_toBottomOf="@id/tasks"
        app:layout_constraintLeft_toRightOf="@id/marginInsideLeft"
        app:layout_constraintRight_toLeftOf="@id/marginInsideRight"
        app:layout_constraintBottom_toTopOf="@id/notes"/>

    <TextView
        android:id="@+id/notes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/days_rectangle"
        app:layout_constraintVertical_weight="40"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintTop_toBottomOf="@id/notesHead"
        app:layout_constraintLeft_toRightOf="@id/marginInsideLeft"
        app:layout_constraintRight_toLeftOf="@id/marginInsideRight"
        app:layout_constraintBottom_toTopOf="@id/marginInsideBottom"/>

    <TextView
        android:id="@+id/marginInsideLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonLeft"
        android:gravity="center"
        android:maxLines="1"
        android:autoSizeTextType="uniform"
        android:textColor="@color/white"
        android:background="@drawable/month_rectangle"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toTopOf="@id/dayBackgroundLeft"
        app:layout_constraintBottom_toBottomOf="@id/dayBackgroundLeft"
        app:layout_constraintLeft_toLeftOf="@id/dayBackgroundLeft"
        app:layout_constraintRight_toLeftOf="@id/marginInsideTop" />

    <TextView
        android:id="@+id/marginInsideRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonRight"
        android:gravity="center"
        android:maxLines="1"
        android:autoSizeTextType="uniform"
        android:textColor="@color/white"
        android:background="@drawable/month_rectangle"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toTopOf="@id/dayBackgroundLeft"
        app:layout_constraintBottom_toBottomOf="@id/dayBackgroundLeft"
        app:layout_constraintLeft_toRightOf="@id/marginInsideTop"
        app:layout_constraintRight_toRightOf="@id/dayBackgroundLeft" />

    <View
        android:id="@+id/marginInsideTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/month_rectangle"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintRight_toLeftOf="@id/marginInsideRight"
        app:layout_constraintLeft_toRightOf="@id/marginInsideLeft"
        app:layout_constraintBottom_toTopOf="@id/daysTable"
        app:layout_constraintTop_toTopOf="@id/dayBackgroundLeft" />

    <View
        android:id="@+id/marginInsideBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/month_rectangle"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintTop_toBottomOf="@id/daysTable"
        app:layout_constraintBottom_toBottomOf="@id/dayBackgroundLeft"
        app:layout_constraintLeft_toRightOf="@id/marginInsideLeft"
        app:layout_constraintRight_toLeftOf="@id/marginInsideRight" />

    <TextView
        android:id="@+id/dayBackground1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/widok_d"
        android:maxLines="2"
        android:background="@drawable/month_rectangle"
        app:layout_constraintVertical_weight="4"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toRightOf="@id/marginLeft"
        app:layout_constraintTop_toBottomOf="@id/marginTop"
        app:layout_constraintRight_toLeftOf="@id/marginSmall1"
        app:layout_constraintBottom_toTopOf="@id/marginTopMonth" />

    <View
        android:id="@+id/marginSmall1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/dayBackground1"
        app:layout_constraintRight_toLeftOf="@id/dayBackground2"
        app:layout_constraintTop_toBottomOf="@id/marginTop"
        app:layout_constraintBottom_toTopOf="@id/marginTopMonth"/>

    <TextView
        android:id="@+id/dayBackground2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/widok_m"
        android:maxLines="2"
        app:layout_constraintHorizontal_weight="6"
        android:background="@drawable/month_rectangle"
        app:layout_constraintLeft_toRightOf="@id/marginSmall1"
        app:layout_constraintTop_toTopOf="@id/dayBackground1"
        app:layout_constraintRight_toLeftOf="@id/marginSmall2"
        app:layout_constraintBottom_toTopOf="@id/marginTopMonth" />

    <View
        android:id="@+id/marginSmall2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/dayBackground2"
        app:layout_constraintRight_toLeftOf="@id/dayBackground3"
        app:layout_constraintTop_toBottomOf="@id/marginTop"
        app:layout_constraintBottom_toTopOf="@id/marginTopMonth"/>

    <TextView
        android:id="@+id/dayBackground3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/widok_r"
        android:maxLines="2"
        app:layout_constraintHorizontal_weight="6"
        android:background="@drawable/month_rectangle"
        app:layout_constraintLeft_toRightOf="@id/marginSmall2"
        app:layout_constraintTop_toTopOf="@id/dayBackground2"
        app:layout_constraintRight_toLeftOf="@id/marginSmall3"
        app:layout_constraintBottom_toTopOf="@id/marginTopMonth" />

    <View
        android:id="@+id/marginSmall3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/dayBackground3"
        app:layout_constraintRight_toLeftOf="@id/dayBackground4"
        app:layout_constraintTop_toBottomOf="@id/marginTop"
        app:layout_constraintBottom_toTopOf="@id/marginTopMonth"/>

    <TextView
        android:id="@+id/dayBackground4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="15dp"
        android:text="@string/o_aplikacji"
        android:maxLines="2"
        app:layout_constraintHorizontal_weight="6"
        android:background="@drawable/month_rectangle"
        app:layout_constraintLeft_toRightOf="@id/marginSmall3"
        app:layout_constraintTop_toTopOf="@id/dayBackground3"
        app:layout_constraintRight_toLeftOf="@id/marginRight"
        app:layout_constraintBottom_toTopOf="@id/marginTopMonth" />

</androidx.constraintlayout.widget.ConstraintLayout>